src/test/deca/syntax/parser/invalid/field_definition_visibility_number.deca
// Parser test, visibility replaced by a number

class myClass {
    145 int x = 12;
}